<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow"
    tools:context="com.example.cosmin.metrorex.MainActivity">


    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:layout_alignBaseline="@+id/username"
        android:layout_alignBottom="@+id/username"
        android:layout_toEndOf="@+id/username"
        android:layout_marginStart="43dp"
        android:id="@+id/etusername"
        android:background="@drawable/border"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp"
        android:layout_below="@+id/username"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/tvpassword"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_alignBaseline="@+id/tvpassword"
        android:layout_alignBottom="@+id/tvpassword"
        android:layout_toEndOf="@+id/username"
        android:id="@+id/etpassword"
        android:layout_alignStart="@+id/etusername"
        android:inputType="textPassword"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/etpassword"
        android:layout_toEndOf="@+id/tvpassword"
        android:layout_marginTop="46dp"
        android:background="@color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singing"
        android:layout_below="@+id/buttonRegister"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:id="@+id/tvsignin"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_metrorex"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
