<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow"
    tools:context="com.example.cosmin.metrorex.Login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:layout_alignBaseline="@+id/username"
        android:layout_alignBottom="@+id/username"
        android:layout_toEndOf="@+id/username"
        android:layout_marginStart="43dp"
        android:id="@+id/etusernamelogin"
        android:background="@drawable/border"
        android:padding="10dp"/>


    <ImageView
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_metrorex"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/buttonLogin"
        android:background="@color/white"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/etpasswordlogin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/border"
        android:padding="10dp"
        android:id="@+id/etpasswordlogin"
        android:inputType="textPassword"
        android:layout_alignBaseline="@+id/tvpassword"
        android:layout_alignBottom="@+id/tvpassword"
        android:layout_alignStart="@+id/etusernamelogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvlogin"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/tvlogin"
        android:textColor="@color/black"/>

    <TextView
        android:text="User Login"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/imageView"
        android:layout_alignEnd="@+id/tvpassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/tvpassword"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/etusernamelogin"
        android:layout_toStartOf="@+id/buttonLogin" />


</RelativeLayout>
