<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cosmin.metrorex.Profile"
    android:background="@color/yellow">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="10dp"
        android:id="@+id/tvprofile"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="Logout"
        android:textColor="@color/white"
        android:id="@+id/buttonLogout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonScaneaza_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:text="Scaneaza"
        android:layout_above="@+id/buttonLogout"
        android:layout_alignStart="@+id/buttonLogout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/aqua"
        android:text="Numar Calatorii:"
        android:id="@+id/tvcalatorii"
        android:padding="10dp"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/tvabonament"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/tvabonament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipabonament"
        android:padding="10dp"
        android:background="@color/aqua"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tvcalatorii" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/aqua"
        android:padding="10dp"
        android:text="@string/credit"
        android:id="@+id/tvcredit"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/tvcalatorii"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/buttonScaneaza_Profile"
        android:layout_alignEnd="@+id/tvcalatorii" />


    <Button
        android:id="@+id/bcredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cumpara"
        android:layout_alignBaseline="@+id/tvcredit"
        android:layout_alignBottom="@+id/tvcredit"
        android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/bcalatorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cumpara calatorii"
            android:layout_below="@+id/bcredit"
            android:layout_alignStart="@+id/bcredit" />
        <Button
            android:id="@+id/babonament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/babonament"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/bcalatorie" />



    </RelativeLayout>


    <ListView
        android:id="@+id/lv_credit"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        ></ListView>

    <ImageView
        android:id="@+id/im_close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/close_button"
        android:layout_alignTop="@+id/lv_credit"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>



</RelativeLayout>
